# MMAC

./: .gitignore  LICENSE.txt  README.md  README.txt  convert_icon.py  create_github_release.py  file_version_info.txt  mmac.py  mmac_build.py  pyproject.toml
